@@ -1,5 +1,9 @@
 2008-11-15  David Teller  <David.Teller@univ-orleans.fr>
 
+	* src/main/nothreads/batteries.ml: [Common] added
+
+	* src/main/threads/batteries.ml: [RMutex], [Common] added
+
 	* src/core/extlib_threads/extPervasivesThreads.ml: removed content
 
 	* src/core/extlib/extPervasives.ml*: [lock] added
